cf Fix sonar warnings
https://jira.i-novus.ru/browse/RDMSYNC-6